--- a/Views/Account/Dashboard.cshtml
+++ b/Views/Account/Dashboard.cshtml
@@ -6,6 +6,10 @@
     <h1 class="display-4">Welcome op het Account Dashboard</h1>
     @if (User.Identity.IsAuthenticated)
     {
+        <form asp-controller="Account" asp-action="Logout" method="post" class="d-inline">
+                <button type="submit" class="nav-link btn btn-outline-danger">Logout</button>
+        </form>
+
         @if (User.IsInRole("Eigenaar") || User.IsInRole("Zaalverantwoordelijke"))
         {
             <a asp-controller="Tafel" asp-action="Index" class="btn btn-primary mt-3 ms-2">
