--- a/Views/Bestelling/Index.cshtml
+++ b/Views/Bestelling/Index.cshtml
@@ -52,7 +52,7 @@
     <div class="list-group-item rounded-3 shadow-sm mb-3 list-group-item-@statusColor bestelling-row" data-status-id="@bestelling.Status.Id">
         <div class="row align-items-center py-2 px-3">
             <div class="col-1 text-start">@bestelling.ReservatieId</div>
-            <div class="col-1 text-start">@bestelling.TijdstipBestelling?.ToString("HH:mm")</div>
+            <div class="col-1 text-start">@bestelling.TijdstipBestelling?.ToString("HH:mm dd/M")</div>
             <div class="col-1 text-start">
                 @(bestelling.Product?.Categorie?.Type?.Naam == "Dranken" ? "Drank" : "Gerecht")
             </div>
