--- a/Views/Quiz/Gerecht.cshtml
+++ b/Views/Quiz/Gerecht.cshtml
@@ -7,14 +7,14 @@
 
     var propNames = new[]
     {
-        "IsZoet", "IsZout", "IsBitter", "IsFris", "IsPikant",
-        "IsWarm", "IsKoud", "IsLicht", "IsZwaar",
-        "IsRomig", "IsFruitig", "IsKruidig", "IsExotisch"
+        "Zoet", "Zout", "Bitter", "Fris", "Pikant",
+        "Warm", "Koud", "Licht", "Zwaar",
+        "Romig", "Fruitig", "Kruidig", "Exotisch"
     };
 }
 
 <div class="drank-quiz-container">
-    <h2 class="drank-quiz-title">Quiz: Vind jouw ideale gerecht</h2>
+    <h2 class="drank-quiz-title">Vind jouw ideale gerecht</h2>
 
     <div class="drank-quiz-progress" aria-hidden="true">
         <div class="drank-quiz-progress-bar" style="width:@(Math.Round(((double)currentQuestion / Math.Max(1, total - 1)) * 100))%"></div>
@@ -42,145 +42,145 @@
                     {
                         case 0:
                             <label class="drank-quiz-option">
-                                <input type="radio" asp-for="IsZoet" value="0" required /> Niet
+                                <input type="radio" asp-for="Zoet" value="0" required /> Niet
                             </label>
                             <label class="drank-quiz-option">
-                                <input type="radio" asp-for="IsZoet" value="1" /> Beetje
+                                <input type="radio" asp-for="Zoet" value="1" /> Beetje
                             </label>
                             <label class="drank-quiz-option">
-                                <input type="radio" asp-for="IsZoet" value="2" /> Heel graag
+                                <input type="radio" asp-for="Zoet" value="2" /> Heel graag
                             </label>
                             break;
                         case 1:
                             <label class="drank-quiz-option">
-                                <input type="radio" asp-for="IsZout" value="0" required /> Niet
+                                <input type="radio" asp-for="Zout" value="0" required /> Niet
                             </label>
                             <label class="drank-quiz-option">
-                                <input type="radio" asp-for="IsZout" value="1" /> Beetje
+                                <input type="radio" asp-for="Zout" value="1" /> Beetje
                             </label>
                             <label class="drank-quiz-option">
-                                <input type="radio" asp-for="IsZout" value="2" /> Heel graag
+                                <input type="radio" asp-for="Zout" value="2" /> Heel graag
                             </label>
                             break;
                         case 2:
                             <label class="drank-quiz-option">
-                                <input type="radio" asp-for="IsBitter" value="0" required /> Niet
+                                <input type="radio" asp-for="Bitter" value="0" required /> Niet
                             </label>
                             <label class="drank-quiz-option">
-                                <input type="radio" asp-for="IsBitter" value="1" /> Beetje
+                                <input type="radio" asp-for="Bitter" value="1" /> Beetje
                             </label>
                             <label class="drank-quiz-option">
-                                <input type="radio" asp-for="IsBitter" value="2" /> Heel graag
+                                <input type="radio" asp-for="Bitter" value="2" /> Heel graag
                             </label>
                             break;
                         case 3:
                             <label class="drank-quiz-option">
-                                <input type="radio" asp-for="IsFris" value="0" required /> Niet
+                                <input type="radio" asp-for="Fris" value="0" required /> Niet
                             </label>
                             <label class="drank-quiz-option">
-                                <input type="radio" asp-for="IsFris" value="1" /> Beetje
+                                <input type="radio" asp-for="Fris" value="1" /> Beetje
                             </label>
                             <label class="drank-quiz-option">
-                                <input type="radio" asp-for="IsFris" value="2" /> Heel graag
+                                <input type="radio" asp-for="Fris" value="2" /> Heel graag
                             </label>
                             break;
                         case 4:
                             <label class="drank-quiz-option">
-                                <input type="radio" asp-for="IsPikant" value="0" required /> Niet
+                                <input type="radio" asp-for="Pikant" value="0" required /> Niet
                             </label>
                             <label class="drank-quiz-option">
-                                <input type="radio" asp-for="IsPikant" value="1" /> Beetje
+                                <input type="radio" asp-for="Pikant" value="1" /> Beetje
                             </label>
                             <label class="drank-quiz-option">
-                                <input type="radio" asp-for="IsPikant" value="2" /> Heel graag
+                                <input type="radio" asp-for="Pikant" value="2" /> Heel graag
                             </label>
                             break;
                         case 5:
                             <label class="drank-quiz-option">
-                                <input type="radio" asp-for="IsWarm" value="0" required /> Niet
+                                <input type="radio" asp-for="Warm" value="0" required /> Niet
                             </label>
                             <label class="drank-quiz-option">
-                                <input type="radio" asp-for="IsWarm" value="1" /> Beetje
+                                <input type="radio" asp-for="Warm" value="1" /> Beetje
                             </label>
                             <label class="drank-quiz-option">
-                                <input type="radio" asp-for="IsWarm" value="2" /> Heel graag
+                                <input type="radio" asp-for="Warm" value="2" /> Heel graag
                             </label>
                             break;
                         case 6:
                             <label class="drank-quiz-option">
-                                <input type="radio" asp-for="IsKoud" value="0" required /> Niet
+                                <input type="radio" asp-for="Koud" value="0" required /> Niet
                             </label>
                             <label class="drank-quiz-option">
-                                <input type="radio" asp-for="IsKoud" value="1" /> Beetje
+                                <input type="radio" asp-for="Koud" value="1" /> Beetje
                             </label>
                             <label class="drank-quiz-option">
-                                <input type="radio" asp-for="IsKoud" value="2" /> Heel graag
+                                <input type="radio" asp-for="Koud" value="2" /> Heel graag
                             </label>
                             break;
                         case 7:
                             <label class="drank-quiz-option">
-                                <input type="radio" asp-for="IsLicht" value="0" required /> Niet
+                                <input type="radio" asp-for="Licht" value="0" required /> Niet
                             </label>
                             <label class="drank-quiz-option">
-                                <input type="radio" asp-for="IsLicht" value="1" /> Beetje
+                                <input type="radio" asp-for="Licht" value="1" /> Beetje
                             </label>
                             <label class="drank-quiz-option">
-                                <input type="radio" asp-for="IsLicht" value="2" /> Heel graag
+                                <input type="radio" asp-for="Licht" value="2" /> Heel graag
                             </label>
                             break;
                         case 8:
                             <label class="drank-quiz-option">
-                                <input type="radio" asp-for="IsZwaar" value="0" required /> Niet
+                                <input type="radio" asp-for="Zwaar" value="0" required /> Niet
                             </label>
                             <label class="drank-quiz-option">
-                                <input type="radio" asp-for="IsZwaar" value="1" /> Beetje
+                                <input type="radio" asp-for="Zwaar" value="1" /> Beetje
                             </label>
                             <label class="drank-quiz-option">
-                                <input type="radio" asp-for="IsZwaar" value="2" /> Heel graag
+                                <input type="radio" asp-for="Zwaar" value="2" /> Heel graag
                             </label>
                             break;
                         case 9:
                             <label class="drank-quiz-option">
-                                <input type="radio" asp-for="IsRomig" value="0" required /> Niet
+                                <input type="radio" asp-for="Romig" value="0" required /> Niet
                             </label>
                             <label class="drank-quiz-option">
-                                <input type="radio" asp-for="IsRomig" value="1" /> Beetje
+                                <input type="radio" asp-for="Romig" value="1" /> Beetje
                             </label>
                             <label class="drank-quiz-option">
-                                <input type="radio" asp-for="IsRomig" value="2" /> Heel graag
+                                <input type="radio" asp-for="Romig" value="2" /> Heel graag
                             </label>
                             break;
                         case 10:
                             <label class="drank-quiz-option">
-                                <input type="radio" asp-for="IsFruitig" value="0" required /> Niet
+                                <input type="radio" asp-for="Fruitig" value="0" required /> Niet
                             </label>
                             <label class="drank-quiz-option">
-                                <input type="radio" asp-for="IsFruitig" value="1" /> Beetje
+                                <input type="radio" asp-for="Fruitig" value="1" /> Beetje
                             </label>
                             <label class="drank-quiz-option">
-                                <input type="radio" asp-for="IsFruitig" value="2" /> Heel graag
+                                <input type="radio" asp-for="Fruitig" value="2" /> Heel graag
                             </label>
                             break;
                         case 11:
                             <label class="drank-quiz-option">
-                                <input type="radio" asp-for="IsKruidig" value="0" required /> Niet
+                                <input type="radio" asp-for="Kruidig" value="0" required /> Niet
                             </label>
                             <label class="drank-quiz-option">
-                                <input type="radio" asp-for="IsKruidig" value="1" /> Beetje
+                                <input type="radio" asp-for="Kruidig" value="1" /> Beetje
                             </label>
                             <label class="drank-quiz-option">
-                                <input type="radio" asp-for="IsKruidig" value="2" /> Heel graag
+                                <input type="radio" asp-for="Kruidig" value="2" /> Heel graag
                             </label>
                             break;
                         case 12:
                             <label class="drank-quiz-option">
-                                <input type="radio" asp-for="IsExotisch" value="0" required /> Niet
+                                <input type="radio" asp-for="Exotisch" value="0" required /> Niet
                             </label>
                             <label class="drank-quiz-option">
-                                <input type="radio" asp-for="IsExotisch" value="1" /> Beetje
+                                <input type="radio" asp-for="Exotisch" value="1" /> Beetje
                             </label>
                             <label class="drank-quiz-option">
-                                <input type="radio" asp-for="IsExotisch" value="2" /> Heel graag
+                                <input type="radio" asp-for="Exotisch" value="2" /> Heel graag
                             </label>
                             break;
                         default:
@@ -189,24 +189,28 @@
                     }
                 </div>
             }
-            else
-            {
-                <p class="drank-quiz-result">Geen vraag gevonden.</p>
-            }
         </div>
 
-        <div class="quiz-actions">
-            <button type="submit" name="submit" value="back" class="btn-back" @(currentQuestion == 0 ? "disabled" : "") aria-disabled="@(currentQuestion == 0 ? "true" : "false")">Terug</button>
-            <button type="submit" name="submit" value="next" class="btn-next">
-                @(currentQuestion < total - 1 ? "Volgende" : "Bekijk mijn match")
-            </button>
-        </div>
+        @if (currentQuestion < total)
+        {
+            <div class="quiz-actions">
+                <button type="submit" name="submit" value="back" class="btn-back" @(currentQuestion == 0 ? "disabled" : "") aria-disabled="@(currentQuestion == 0 ? "true" : "false")">Terug</button>
+                <button type="submit" name="submit" value="next" class="btn-next">
+                    @(currentQuestion < total - 1 ? "Volgende" : "Bekijk mijn match")
+                </button>
+            </div>
+        }
     </form>
 
     @if (ViewBag.BestMatch != null)
     {
         <div class="drank-quiz-result">
             <h3>Jouw beste match: @ViewBag.BestMatch</h3>
+
+            <div class="quiz-actions" style="margin-top:1.25rem;">
+                <a asp-controller="Quiz" asp-action="Gerecht" class="btn-custom-primary" role="button">Opnieuw beginnen</a>
+                <a asp-controller="Home" asp-action="Index" class="btn-custom-secondary" role="button">Naar homepage</a>
+            </div>
         </div>
     }
 </div>
