--- a/Views/Bestelling/Index.cshtml
+++ b/Views/Bestelling/Index.cshtml
@@ -37,13 +37,13 @@
     <div class="list-group-item rounded-3 shadow-sm mb-3 bg-secondary-subtle">
         <div class="row fw-bold text-secondary py-2 px-3">
             <div class="col-1 text-start">Reservatie</div>
+            <div class="col-1 text-start">Aantal</div>
             <div class="col-1 text-start">Tijdstip</div>
             <div class="col-1 text-start">Type</div>
             <div class="col-2 text-start">Product</div>
             <div class="col-2 text-start">Allergenen</div>
             <div class="col-2 text-start">Opmerkingen</div>
             <div class="col-2 text-start">Status</div>
-            <div class="col-1"></div>
         </div>
     </div>
 
@@ -56,6 +56,7 @@
         <div class="list-group-item rounded-3 shadow-sm mb-3 list-group-item-@statusColor bestelling-row" data-status-id="@bestelling.Status.Id">
             <div class="row align-items-center py-2 px-3">
                 <div class="col-1 text-start">@bestelling.ReservatieId</div>
+                <div class="col-1 text-start">@bestelling.Aantal</div>
                 <div class="col-1 text-start">@bestelling.TijdstipBestelling?.ToString("HH:mm dd/M")</div>
                 <div class="col-1 text-start">
                     @if (bestelling.Product?.Categorie?.Type?.Naam == "Dranken")
@@ -82,12 +83,6 @@
                             }
                         </select>
                     </form>
-                </div>
-                <div class="col-1">
-                    @* <a asp-controller="Bestelling" asp-action="Bewerken" asp-route-id="@bestelling.Id"
-                   class="btn btn-link p-0 ms-2" title="Bewerken">
-                    <i class="bi bi-pencil-fill text-black"></i>
-                </a> *@
                 </div>
             </div>
         </div>
